@@ -9,6 +9,9 @@ git-annex (4.20130921) UNRELEASED; urgency=low
     example.
   * Android build redone from scratch, many dependencies updated,
     and entire build can now be done using provided scripts.
+  * assistant: Clear the list of failed transfers when doing a full transfer
+    scan. This prevents repeated retries to download files that are not
+    available, or are not referenced by the current git tree.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 22 Sep 2013 19:42:29 -0400
 
